[Style] CSS issues related to post template margins, card slider height being overflowed and sliders card also being overflown by longer than expected description text

--- a/src/components/AppComponents/Posts/PostSlider/slider.css
+++ b/src/components/AppComponents/Posts/PostSlider/slider.css
@@ -10,7 +10,7 @@
 }
 
 #swiper-1.swiper-container {
-  height: 400px;
+  height: 450px;
 }
 
 @media (min-width: 1024px) {
